Correct minor inconsistency in spacing of glyphs

--- a/css/annotator.css
+++ b/css/annotator.css
@@ -829,12 +829,12 @@
 
 .annotator-filter .annotator-filter-navigation button::after {
 	position: absolute;
-	top: 9px;
+	top: 8px;
 	left: 8px;
 	content: "";
 	display: block;
-	width: 7px;
-	height: 7px;
+	width: 9px;
+	height: 9px;
 	background-position: 0 -210px;
 }
 
@@ -852,12 +852,12 @@
 
 .annotator-filter .annotator-filter-navigation .annotator-filter-next::after {
 	left: auto;
-	right: 9px;
+	right: 7px;
 	background-position: 0 -240px;
 }
 
 .annotator-filter .annotator-filter-navigation .annotator-filter-next:hover::after {
-	background-position: 0 -256px;
+	background-position: 0 -255px;
 }
 
 .annotator-hl-active {
